Reduced the dependency list